# Verilog-RISC-V-Pipeline

./: .gitignore  CMakeLists.txt  Makefile  README.md  addi_program.hex  full_instr_test.hex  run_tests.sh  run_verilator.sh
hex/: addi.hex  branch_jump.hex  forwarding.hex  load_store_byte.hex  lw_sw.hex  stall_bubble_lw.hex
include/: defs.vh
rtl/: alu.v  alu_opcodes.vh  control_unit.v  ex_mem_register.v  id_ex_register.v  if_id_register.v  immediate_generator.sv  immediate_generator.v  instruction_memory.sv  instruction_memory.v  mem_wb_register.v  pc_logic.v  register_file.sv  register_file.v  riscv_pipeline_top.sv  riscv_pipeline_top.v  rv_opcodes.vh
src/: alu.sv  branch_unit.sv  control_unit.sv  data_memory.sv  hazard_unit.sv  immediate_generator.sv  instruction_memory.sv  pc_logic.sv  riscv_pipeline_top.sv
tb/: addi_tb.cpp  addi_verilator.cpp  branch_jump_tb.cpp  forwarding.cpp  forwarding_tb.cpp  load_store_byte_tb.cpp  lw_sw_tb.cpp  pipeline_addi_tb.v  quick_check_tb.v  rv_utils.h  stall_bubble_lw_tb.cpp  template.cpp
